--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -12,7 +12,7 @@
         <div class="authors">
             {{ post.authors }}
         </div>
-        <em>{{ post.venue }}</em>, {{ post.date | date: "%Y" }}
+        <em>{{ post.venue }}</em>
         <br>
 
         {% assign need_separator = false %}
