--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,4 +1,4 @@
-{% assign publication_posts = site.posts | contains: 'categories', 'publications' %}
+{% assign publication_posts = site.posts | | where_exp: "post", "post.categories contains 'publications'" %}
 {% if publication_posts.size > 0 %}
 <div class="row py-2">
     <div class="col-md-12" id="publications">
