--- a/_includes/award.html
+++ b/_includes/award.html
@@ -13,7 +13,7 @@
 
 {% if competitions.size > 0 %}
 <div class="row py-2">
-  <div class="col-md-12" id="competitions">
+  <div class="col-12" id="competitions">
     <h3>Competitions</h3>
     <ul>
       {% for post in competitions %}
@@ -26,7 +26,7 @@
 
 {% if scholarships.size > 0 %}
 <div class="row py-2">
-  <div class="col-md-12" id="scholarships">
+  <div class="col-12" id="scholarships">
     <h3>Scholarships</h3>
     <ul>
       {% for post in scholarships %}
