--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,7 +1,3 @@
----
-layout: default
----
-
 <div class="row flex-column-reverse flex-md-row py-2">
     <div class="col-md-8" id="bio">
         <h1>Shihan Fang</h1>
@@ -23,6 +19,6 @@ layout: default
         </p>
     </div>
     <div class="col-md-4" style="z-index:4;">
-        <img alt="profile photo" id="portrait" src="images/bio.jpg">
+        <img alt="profile photo" id="portrait" src="images/gallery-bio.jpg">
     </div>
 </div>
